--- a/client/index.html
+++ b/client/index.html
@@ -1,10 +1,47 @@
-<!doctype html>
-<html lang="en">
+<!DOCTYPE html>
+<html lang="tr">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/png" href="/dlogo2.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+
+    <title>Deposun - Kaliteli ve Uygun Fiyatlı Ürünler</title>
+    <meta
+      name="description"
+      content="En trend ürünleri, en uygun fiyatlarla keşfedin. Hızlı kargo ve güvenli alışveriş deneyimi için Deposun'u ziyaret edin."
+    />
+    <meta
+      name="keywords"
+      content="e-ticaret, online alışveriş, moda, elektronik, ev yaşam"
+    />
+    <link rel="canonical" href="https://Deposun.com/" />
+
+    <meta
+      property="og:title"
+      content="Deposun - Kaliteli ve Uygun Fiyatlı Ürünler"
+    />
+    <meta
+      property="og:description"
+      content="En trend ürünleri, en uygun fiyatlarla keşfedin."
+    />
+    <meta property="og:image" content="https://Deposun.com/og-image.png" />
+    <meta property="og:url" content="https://Deposun.com/" />
+    <meta property="og:type" content="website" />
+    <meta property="og:locale" content="tr_TR" />
+
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta
+      name="twitter:title"
+      content="Deposun - Kaliteli ve Uygun Fiyatlı Ürünler"
+    />
+    <meta
+      name="twitter:description"
+      content="En trend ürünleri, en uygun fiyatlarla keşfedin."
+    />
+    <meta
+      name="twitter:image"
+      content="https://Deposun.com/twitter-image.png"
+    />
   </head>
   <body>
     <div id="root"></div>
