--- a/client/index.html
+++ b/client/index.html
@@ -2,7 +2,7 @@
 <html lang="tr">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="/dlogo2.png" />
+    <link rel="icon" type="image/png" href="/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <title>Deposun - Kaliteli ve Uygun Fiyatlı Ürünler</title>
