--- a/client/index.html
+++ b/client/index.html
@@ -10,43 +10,351 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 
-    <title>Deposun - Kaliteli ve Uygun Fiyatlı Ürünler</title>
+    <title>Deposun - Güneş Enerjisi Sistemleri ve Solar Panel Çözümleri | Konya</title>
     <meta
       name="description"
-      content="En trend ürünleri, en uygun fiyatlarla keşfedin. Hızlı kargo ve güvenli alışveriş deneyimi için Deposun'u ziyaret edin."
+      content="Konya'da güneş enerjisi sistemleri, solar panel, inverter ve akü satışı. En uygun fiyatlarla güneş paneli fiyatları 2024, çatı GES kurulumu, mahsuplaşma ve devlet desteği. Hızlı kargo ve güvenli alışveriş."
     />
     <meta
       name="keywords"
-      content="e-ticaret, online alışveriş, moda, elektronik, ev yaşam"
+      content="güneş enerjisi, solar panel, güneş paneli fiyatları 2024, inverter, akü, çatı GES, mahsuplaşma, devlet desteği, Konya güneş enerjisi, solar sistem, monokristal panel, polikristal panel, tam sinüs inverter, akıllı inverter, jel akü, lityum akü, off-grid, on-grid, hibrit inverter, 3kw, 5kw, 10kw güneş enerjisi, Deye, Sako, TommaTech, Lexron, Mexxsun, Orbus, Powermaster"
     />
-    <link rel="canonical" href="https://Deposun.com/" />
+    <link rel="canonical" href="https://deposun.com/" />
 
+    <!-- Open Graph Meta Tags -->
     <meta
       property="og:title"
-      content="Deposun - Kaliteli ve Uygun Fiyatlı Ürünler"
+      content="Deposun - Güneş Enerjisi Sistemleri ve Solar Panel Çözümleri | Konya"
     />
     <meta
       property="og:description"
-      content="En trend ürünleri, en uygun fiyatlarla keşfedin."
+      content="Konya'da güneş enerjisi sistemleri, solar panel, inverter ve akü satışı. En uygun fiyatlarla güneş paneli fiyatları 2024, çatı GES kurulumu."
     />
-    <meta property="og:image" content="https://Deposun.com/og-image.png" />
-    <meta property="og:url" content="https://Deposun.com/" />
+    <meta property="og:image" content="https://deposun.com/dlogo2.png" />
+    <meta property="og:url" content="https://deposun.com/" />
     <meta property="og:type" content="website" />
     <meta property="og:locale" content="tr_TR" />
 
+    <!-- Twitter Meta Tags -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta
       name="twitter:title"
-      content="Deposun - Kaliteli ve Uygun Fiyatlı Ürünler"
+      content="Deposun - Güneş Enerjisi Sistemleri ve Solar Panel Çözümleri | Konya"
     />
     <meta
       name="twitter:description"
-      content="En trend ürünleri, en uygun fiyatlarla keşfedin."
+      content="Konya'da güneş enerjisi sistemleri, solar panel, inverter ve akü satışı. En uygun fiyatlarla güneş paneli fiyatları 2024."
     />
     <meta
       name="twitter:image"
-      content="https://Deposun.com/twitter-image.png"
+      content="https://deposun.com/dlogo2.png"
     />
+
+    <!-- Additional SEO Meta Tags -->
+    <meta name="author" content="Deposun - Konya Güneş Enerjisi Sistemleri" />
+    <meta name="robots" content="index, follow" />
+    <meta name="language" content="Turkish" />
+    <meta name="geo.region" content="TR-42" />
+    <meta name="geo.placename" content="Konya" />
+    <meta name="geo.position" content="37.94720154281759, 32.579534068588345" />
+    <meta name="ICBM" content="37.94720154281759, 32.579534068588345" />
+
+    <!-- Structured Data for Local Business -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "LocalBusiness",
+      "name": "Deposun",
+      "description": "Konya'da güneş enerjisi sistemleri, solar panel, inverter ve akü satışı",
+      "url": "https://deposun.com",
+      "telephone": "+90-532-471-28-24",
+      "address": {
+        "@type": "PostalAddress",
+        "addressLocality": "Konya",
+        "addressRegion": "Konya",
+        "addressCountry": "TR"
+      },
+      "geo": {
+        "@type": "GeoCoordinates",
+        "latitude": 37.94720154281759, 
+        "longitude": 32.579529374722654
+      },
+      "openingHours": "Mo-Fr 09:00-18:00",
+      "priceRange": "₺₺",
+      "hasOfferCatalog": {
+        "@type": "OfferCatalog",
+        "name": "Güneş Enerjisi Sistemleri ve Solar Ürünler",
+        "itemListElement": [
+          {
+            "@type": "Offer",
+            "itemOffered": {
+              "@type": "Product",
+              "name": "Monokristal Güneş Paneli",
+              "description": "Yüksek verimlilikli monokristal güneş panelleri - 400W, 450W, 500W, 550W, 600W, 700W",
+              "brand": {
+                "@type": "Brand",
+                "name": "TommaTech, Deye, Sako, Lexron, Mexxsun, Orbus, Powermaster"
+              },
+              "category": "Güneş Paneli"
+            }
+          },
+          {
+            "@type": "Offer",
+            "itemOffered": {
+              "@type": "Product",
+              "name": "Polikristal Güneş Paneli",
+              "description": "Ekonomik polikristal güneş panelleri - 300W, 350W, 400W, 450W",
+              "brand": {
+                "@type": "Brand",
+                "name": "TommaTech, Deye, Sako, Lexron, Mexxsun"
+              },
+              "category": "Güneş Paneli"
+            }
+          },
+          {
+            "@type": "Offer",
+            "itemOffered": {
+              "@type": "Product",
+              "name": "Half-Cut Güneş Paneli",
+              "description": "Gölgelenmeye dayanıklı half-cut teknolojili paneller",
+              "brand": {
+                "@type": "Brand",
+                "name": "TommaTech, Deye, Sako, Lexron"
+              },
+              "category": "Güneş Paneli"
+            }
+          },
+          {
+            "@type": "Offer",
+            "itemOffered": {
+              "@type": "Product",
+              "name": "Bifacial Güneş Paneli",
+              "description": "Çift yüzeyli bifacial güneş panelleri - yüksek verimlilik",
+              "brand": {
+                "@type": "Brand",
+                "name": "TommaTech, Deye, Sako, Lexron"
+              },
+              "category": "Güneş Paneli"
+            }
+          },
+          {
+            "@type": "Offer",
+            "itemOffered": {
+              "@type": "Product",
+              "name": "On-Grid İnverter",
+              "description": "Şebeke bağlantılı on-grid inverterler - 1kW, 2kW, 3kW, 5kW, 10kW, 15kW, 20kW",
+              "brand": {
+                "@type": "Brand",
+                "name": "TommaTech, Deye, Sako, Lexron, Mexxsun, Orbus"
+              },
+              "category": "İnverter"
+            }
+          },
+          {
+            "@type": "Offer",
+            "itemOffered": {
+              "@type": "Product",
+              "name": "Off-Grid İnverter",
+              "description": "Şebeke bağımsız off-grid inverterler - 12V, 24V, 48V sistemler",
+              "brand": {
+                "@type": "Brand",
+                "name": "TommaTech, Deye, Sako, Lexron, Mexxsun"
+              },
+              "category": "İnverter"
+            }
+          },
+          {
+            "@type": "Offer",
+            "itemOffered": {
+              "@type": "Product",
+              "name": "Hibrit İnverter",
+              "description": "On-grid ve off-grid hibrit inverterler - akü entegrasyonlu",
+              "brand": {
+                "@type": "Brand",
+                "name": "TommaTech, Deye, Sako, Lexron, Mexxsun"
+              },
+              "category": "İnverter"
+            }
+          },
+          {
+            "@type": "Offer",
+            "itemOffered": {
+              "@type": "Product",
+              "name": "Tam Sinüs İnverter",
+              "description": "Hassas elektronik cihazlar için tam sinüs dalga inverterler",
+              "brand": {
+                "@type": "Brand",
+                "name": "TommaTech, Deye, Sako, Lexron, Mexxsun, Orbus"
+              },
+              "category": "İnverter"
+            }
+          },
+          {
+            "@type": "Offer",
+            "itemOffered": {
+              "@type": "Product",
+              "name": "Akıllı İnverter",
+              "description": "MPPT teknolojili akıllı inverterler - WiFi bağlantılı",
+              "brand": {
+                "@type": "Brand",
+                "name": "TommaTech, Deye, Sako, Lexron, Mexxsun"
+              },
+              "category": "İnverter"
+            }
+          },
+          {
+            "@type": "Offer",
+            "itemOffered": {
+              "@type": "Product",
+              "name": "Jel Akü",
+              "description": "Deep cycle jel aküler - 50Ah, 100Ah, 150Ah, 200Ah, 250Ah",
+              "brand": {
+                "@type": "Brand",
+                "name": "Orbus, Deye, Sako, Lexron"
+              },
+              "category": "Akü"
+            }
+          },
+          {
+            "@type": "Offer",
+            "itemOffered": {
+              "@type": "Product",
+              "name": "Lityum Akü",
+              "description": "LiFePO4 lityum aküler - uzun ömürlü ve hafif",
+              "brand": {
+                "@type": "Brand",
+                "name": "Deye, Sako"
+              },
+              "category": "Akü"
+            }
+          },
+          {
+            "@type": "Offer",
+            "itemOffered": {
+              "@type": "Product",
+              "name": "Deep Cycle Akü",
+              "description": "Solar sistemler için özel deep cycle aküler",
+              "brand": {
+                "@type": "Brand",
+                "name": "Orbus, Deye, Sako, Lexron"
+              },
+              "category": "Akü"
+            }
+          },
+          {
+            "@type": "Offer",
+            "itemOffered": {
+              "@type": "Product",
+              "name": "Solar Kablo",
+              "description": "Güneş enerjisi sistemleri için özel solar kablolar - 4mm², 6mm², 10mm²",
+              "category": "Aksesuar"
+            }
+          },
+          {
+            "@type": "Offer",
+            "itemOffered": {
+              "@type": "Product",
+              "name": "MC4 Konnektör",
+              "description": "Güneş paneli bağlantı konnektörleri - erkek/dişi set",
+              "category": "Aksesuar"
+            }
+          },
+          {
+            "@type": "Offer",
+            "itemOffered": {
+              "@type": "Product",
+              "name": "Solar Montaj Sistemi",
+              "description": "Çatı ve zemin montaj sistemleri - alüminyum profil",
+              "category": "Aksesuar"
+            }
+          },
+          {
+            "@type": "Offer",
+            "itemOffered": {
+              "@type": "Product",
+              "name": "Solar Şarj Kontrolcüsü",
+              "description": "MPPT ve PWM şarj kontrolcüleri - 10A, 20A, 30A, 40A",
+              "brand": {
+                "@type": "Brand",
+                "name": "TommaTech, Deye, Sako, Lexron, Mexxsun"
+              },
+              "category": "Aksesuar"
+            }
+          },
+          {
+            "@type": "Offer",
+            "itemOffered": {
+              "@type": "Product",
+              "name": "GES Kurulum Hizmeti",
+              "description": "Çatı GES kurulum ve bakım hizmetleri",
+              "category": "Hizmet"
+            }
+          },
+          {
+            "@type": "Offer",
+            "itemOffered": {
+              "@type": "Product",
+              "name": "Mahsuplaşma Danışmanlığı",
+              "description": "Net-metering başvuru ve takip hizmetleri",
+              "category": "Hizmet"
+            }
+          },
+          {
+            "@type": "Offer",
+            "itemOffered": {
+              "@type": "Product",
+              "name": "Devlet Desteği Danışmanlığı",
+              "description": "GES teşvik ve hibe başvuru danışmanlığı",
+              "category": "Hizmet"
+            }
+          }
+        ]
+             },
+       "serviceArea": {
+         "@type": "GeoCircle",
+         "geoMidpoint": {
+           "@type": "GeoCoordinates",
+           "latitude": 37.94720154281759,
+           "longitude": 32.579529374722654
+         },
+         "geoRadius": "50000"
+       },
+               "areaServed": [
+          {
+            "@type": "City",
+            "name": "Konya"
+          },
+          {
+            "@type": "City", 
+            "name": "Selçuklu"
+          },
+          {
+            "@type": "City",
+            "name": "Meram"
+          },
+          {
+            "@type": "City",
+            "name": "Karatay"
+          },
+          {
+            "@type": "Country",
+            "name": "Turkey"
+          },
+          {
+            "@type": "DefinedRegion",
+            "name": "Middle East"
+          },
+          {
+            "@type": "DefinedRegion",
+            "name": "Europe"
+          },
+          {
+            "@type": "DefinedRegion",
+            "name": "Africa"
+          }
+        ]
+     }
+     </script>
   </head>
   <body>
     <div id="root"></div>
