feat(client): enhance business details in index.html with additional metadata
- Added image URL for the business logo to improve visual representation.
- Included aggregate rating information with rating value and review count for better SEO and user trust.
- Updated address details with street address and postal code for improved location accuracy.

--- a/client/index.html
+++ b/client/index.html
@@ -67,9 +67,17 @@
       "name": "Deposun",
       "description": "Konya'da güneş enerjisi sistemleri, solar panel, inverter ve akü satışı",
       "url": "https://deposun.com",
+      "image": "https://deposun.com/dlogo2.png",
       "telephone": "+90-532-471-28-24",
+      "aggregateRating": {
+        "@type": "AggregateRating",
+        "ratingValue": "4.7",
+        "reviewCount": "896"
+      },
       "address": {
         "@type": "PostalAddress",
+        "streetAddress": "Fevziçakmak Mahallesi, 10762. Sk. No:1A",
+        "postalCode": "42050",
         "addressLocality": "Konya",
         "addressRegion": "Konya",
         "addressCountry": "TR"
