feat(client): update index.html to correct Offer type to Offers for product listings
- Changed "@type" from "Offer" to "Offers" for multiple product entries to ensure proper schema representation.
- This update enhances the semantic accuracy of the product data structure in the HTML file.

--- a/client/index.html
+++ b/client/index.html
@@ -94,7 +94,7 @@
         "name": "Güneş Enerjisi Sistemleri ve Solar Ürünler",
         "itemListElement": [
           {
-            "@type": "Offer",
+            "@type": "Offers",
             "itemOffered": {
               "@type": "Product",
               "name": "Monokristal Güneş Paneli",
@@ -107,7 +107,7 @@
             }
           },
           {
-            "@type": "Offer",
+            "@type": "Offers",
             "itemOffered": {
               "@type": "Product",
               "name": "Polikristal Güneş Paneli",
@@ -120,7 +120,7 @@
             }
           },
           {
-            "@type": "Offer",
+            "@type": "Offers",
             "itemOffered": {
               "@type": "Product",
               "name": "Half-Cut Güneş Paneli",
@@ -133,7 +133,7 @@
             }
           },
           {
-            "@type": "Offer",
+            "@type": "Offers",
             "itemOffered": {
               "@type": "Product",
               "name": "Bifacial Güneş Paneli",
@@ -146,7 +146,7 @@
             }
           },
           {
-            "@type": "Offer",
+            "@type": "Offers",
             "itemOffered": {
               "@type": "Product",
               "name": "On-Grid İnverter",
@@ -159,7 +159,7 @@
             }
           },
           {
-            "@type": "Offer",
+            "@type": "Offers",
             "itemOffered": {
               "@type": "Product",
               "name": "Off-Grid İnverter",
@@ -172,7 +172,7 @@
             }
           },
           {
-            "@type": "Offer",
+            "@type": "Offers",
             "itemOffered": {
               "@type": "Product",
               "name": "Hibrit İnverter",
@@ -185,7 +185,7 @@
             }
           },
           {
-            "@type": "Offer",
+            "@type": "Offers",
             "itemOffered": {
               "@type": "Product",
               "name": "Tam Sinüs İnverter",
@@ -198,7 +198,7 @@
             }
           },
           {
-            "@type": "Offer",
+            "@type": "Offers",
             "itemOffered": {
               "@type": "Product",
               "name": "Akıllı İnverter",
@@ -211,7 +211,7 @@
             }
           },
           {
-            "@type": "Offer",
+            "@type": "Offers",
             "itemOffered": {
               "@type": "Product",
               "name": "Jel Akü",
@@ -224,7 +224,7 @@
             }
           },
           {
-            "@type": "Offer",
+            "@type": "Offers",
             "itemOffered": {
               "@type": "Product",
               "name": "Lityum Akü",
@@ -237,7 +237,7 @@
             }
           },
           {
-            "@type": "Offer",
+            "@type": "Offers",
             "itemOffered": {
               "@type": "Product",
               "name": "Deep Cycle Akü",
@@ -250,7 +250,7 @@
             }
           },
           {
-            "@type": "Offer",
+            "@type": "Offers",
             "itemOffered": {
               "@type": "Product",
               "name": "Solar Kablo",
@@ -259,7 +259,7 @@
             }
           },
           {
-            "@type": "Offer",
+            "@type": "Offers",
             "itemOffered": {
               "@type": "Product",
               "name": "MC4 Konnektör",
@@ -268,7 +268,7 @@
             }
           },
           {
-            "@type": "Offer",
+            "@type": "Offers",
             "itemOffered": {
               "@type": "Product",
               "name": "Solar Montaj Sistemi",
@@ -277,7 +277,7 @@
             }
           },
           {
-            "@type": "Offer",
+            "@type": "Offers",
             "itemOffered": {
               "@type": "Product",
               "name": "Solar Şarj Kontrolcüsü",
@@ -290,7 +290,7 @@
             }
           },
           {
-            "@type": "Offer",
+            "@type": "Offers",
             "itemOffered": {
               "@type": "Product",
               "name": "GES Kurulum Hizmeti",
@@ -299,7 +299,7 @@
             }
           },
           {
-            "@type": "Offer",
+            "@type": "Offers",
             "itemOffered": {
               "@type": "Product",
               "name": "Mahsuplaşma Danışmanlığı",
@@ -308,7 +308,7 @@
             }
           },
           {
-            "@type": "Offer",
+            "@type": "Offers",
             "itemOffered": {
               "@type": "Product",
               "name": "Devlet Desteği Danışmanlığı",
