feat: implement page reload on back/forward navigation and improve code formatting
- Added a script to reload the page if it is loaded from the cache or through back/forward navigation, enhancing user experience.
- Improved code formatting in various components for better readability and consistency.
- Updated navigation handling in the CheckAuth component to streamline route checks.
- Refactored the AuthLogin and AuthRegister components to ensure proper navigation based on user roles after authentication.

--- a/client/index.html
+++ b/client/index.html
@@ -375,6 +375,21 @@
         ]
       }
     </script>
+    <script>
+      window.addEventListener("pageshow", function (event) {
+        // event.persisted: Sayfa önbellekten (BFCache) mi yüklendi?
+        // performance.navigation.type === 2: Gezinme türü "Back/Forward" mı?
+        var historyTraversal =
+          event.persisted ||
+          (typeof window.performance != "undefined" &&
+            window.performance.navigation.type === 2);
+
+        if (historyTraversal) {
+          // Eğer sayfa geçmişten/önbellekten geliyorsa sayfayı sunucudan zorla yenile.
+          window.location.reload();
+        }
+      });
+    </script>
   </head>
   <body>
     <div id="root"></div>
